--- a/analyses.html
+++ b/analyses.html
@@ -3242,20 +3242,20 @@ vertical-align: -.125em;
 </details>
 <div class="cell-output-display">
 <div>
-<div id="swjsfncfog" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#swjsfncfog table {
+<div id="muewarmuww" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#muewarmuww table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#swjsfncfog thead, #swjsfncfog tbody, #swjsfncfog tfoot, #swjsfncfog tr, #swjsfncfog td, #swjsfncfog th {
+#muewarmuww thead, #muewarmuww tbody, #muewarmuww tfoot, #muewarmuww tr, #muewarmuww td, #muewarmuww th {
 border-style: none;
 }
-#swjsfncfog p {
+#muewarmuww p {
 margin: 0;
 padding: 0;
 }
-#swjsfncfog .gt_table {
+#muewarmuww .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -3280,11 +3280,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#swjsfncfog .gt_caption {
+#muewarmuww .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#swjsfncfog .gt_title {
+#muewarmuww .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -3295,7 +3295,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#swjsfncfog .gt_subtitle {
+#muewarmuww .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -3306,7 +3306,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#swjsfncfog .gt_heading {
+#muewarmuww .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -3317,12 +3317,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#swjsfncfog .gt_bottom_border {
+#muewarmuww .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#swjsfncfog .gt_col_headings {
+#muewarmuww .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3336,7 +3336,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#swjsfncfog .gt_col_heading {
+#muewarmuww .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3355,7 +3355,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#swjsfncfog .gt_column_spanner_outer {
+#muewarmuww .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3366,13 +3366,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#swjsfncfog .gt_column_spanner_outer:first-child {
+#muewarmuww .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#swjsfncfog .gt_column_spanner_outer:last-child {
+#muewarmuww .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#swjsfncfog .gt_column_spanner {
+#muewarmuww .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -3383,10 +3383,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#swjsfncfog .gt_spanner_row {
+#muewarmuww .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#swjsfncfog .gt_group_heading {
+#muewarmuww .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3411,7 +3411,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#swjsfncfog .gt_empty_group_heading {
+#muewarmuww .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -3425,13 +3425,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#swjsfncfog .gt_from_md > :first-child {
+#muewarmuww .gt_from_md > :first-child {
 margin-top: 0;
 }
-#swjsfncfog .gt_from_md > :last-child {
+#muewarmuww .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#swjsfncfog .gt_row {
+#muewarmuww .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3449,7 +3449,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#swjsfncfog .gt_stub {
+#muewarmuww .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3461,7 +3461,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#swjsfncfog .gt_stub_row_group {
+#muewarmuww .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3474,13 +3474,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#swjsfncfog .gt_row_group_first td {
+#muewarmuww .gt_row_group_first td {
 border-top-width: 2px;
 }
-#swjsfncfog .gt_row_group_first th {
+#muewarmuww .gt_row_group_first th {
 border-top-width: 2px;
 }
-#swjsfncfog .gt_summary_row {
+#muewarmuww .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3489,14 +3489,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#swjsfncfog .gt_first_summary_row {
+#muewarmuww .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#swjsfncfog .gt_first_summary_row.thick {
+#muewarmuww .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#swjsfncfog .gt_last_summary_row {
+#muewarmuww .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3505,7 +3505,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#swjsfncfog .gt_grand_summary_row {
+#muewarmuww .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3514,7 +3514,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#swjsfncfog .gt_first_grand_summary_row {
+#muewarmuww .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3523,7 +3523,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#swjsfncfog .gt_last_grand_summary_row_top {
+#muewarmuww .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3532,10 +3532,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#swjsfncfog .gt_striped {
+#muewarmuww .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#swjsfncfog .gt_table_body {
+#muewarmuww .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3543,7 +3543,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#swjsfncfog .gt_footnotes {
+#muewarmuww .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3556,7 +3556,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#swjsfncfog .gt_footnote {
+#muewarmuww .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -3564,7 +3564,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#swjsfncfog .gt_sourcenotes {
+#muewarmuww .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3577,64 +3577,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#swjsfncfog .gt_sourcenote {
+#muewarmuww .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#swjsfncfog .gt_left {
+#muewarmuww .gt_left {
 text-align: left;
 }
-#swjsfncfog .gt_center {
+#muewarmuww .gt_center {
 text-align: center;
 }
-#swjsfncfog .gt_right {
+#muewarmuww .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#swjsfncfog .gt_font_normal {
+#muewarmuww .gt_font_normal {
 font-weight: normal;
 }
-#swjsfncfog .gt_font_bold {
+#muewarmuww .gt_font_bold {
 font-weight: bold;
 }
-#swjsfncfog .gt_font_italic {
+#muewarmuww .gt_font_italic {
 font-style: italic;
 }
-#swjsfncfog .gt_super {
+#muewarmuww .gt_super {
 font-size: 65%;
 }
-#swjsfncfog .gt_footnote_marks {
+#muewarmuww .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#swjsfncfog .gt_asterisk {
+#muewarmuww .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#swjsfncfog .gt_indent_1 {
+#muewarmuww .gt_indent_1 {
 text-indent: 5px;
 }
-#swjsfncfog .gt_indent_2 {
+#muewarmuww .gt_indent_2 {
 text-indent: 10px;
 }
-#swjsfncfog .gt_indent_3 {
+#muewarmuww .gt_indent_3 {
 text-indent: 15px;
 }
-#swjsfncfog .gt_indent_4 {
+#muewarmuww .gt_indent_4 {
 text-indent: 20px;
 }
-#swjsfncfog .gt_indent_5 {
+#muewarmuww .gt_indent_5 {
 text-indent: 25px;
 }
-#swjsfncfog .katex-display {
+#muewarmuww .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#swjsfncfog div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#muewarmuww div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
@@ -3732,7 +3732,7 @@ height: 0px !important;
 </tr>
 <tr class="odd">
 <td class="gt_row gt_left" headers="label">    étudiant en M2 (master deuxième année)</td>
-<td class="gt_row gt_center" headers="stat_0">15,0% (18)</td>
+<td class="gt_row gt_center" headers="stat_0">15,8% (19)</td>
 </tr>
 <tr class="even">
 <td class="gt_row gt_left" headers="label">    doctorant</td>
@@ -3744,11 +3744,11 @@ height: 0px !important;
 </tr>
 <tr class="even">
 <td class="gt_row gt_left" headers="label">    ingénieur d&#39;études</td>
-<td class="gt_row gt_center" headers="stat_0">13,3% (16)</td>
+<td class="gt_row gt_center" headers="stat_0">15,0% (18)</td>
 </tr>
 <tr class="odd">
 <td class="gt_row gt_left" headers="label">    ingénieur de recherche</td>
-<td class="gt_row gt_center" headers="stat_0">10,0% (12)</td>
+<td class="gt_row gt_center" headers="stat_0">10,8% (13)</td>
 </tr>
 <tr class="even">
 <td class="gt_row gt_left" headers="label">    enseignant-chercheur (MCF ou professeur)</td>
@@ -3760,7 +3760,7 @@ height: 0px !important;
 </tr>
 <tr class="even">
 <td class="gt_row gt_left" headers="label">    autre</td>
-<td class="gt_row gt_center" headers="stat_0">11,7% (14)</td>
+<td class="gt_row gt_center" headers="stat_0">8,3% (10)</td>
 </tr>
 <tr class="odd">
 <td class="gt_row gt_left" headers="label" style="font-weight: bold">Discipline</td>
@@ -3796,35 +3796,39 @@ height: 0px !important;
 <td class="gt_row gt_center" headers="stat_0">4,2% (5)</td>
 </tr>
 <tr class="odd">
+<td class="gt_row gt_left" headers="label">    écologie</td>
+<td class="gt_row gt_center" headers="stat_0">3,3% (4)</td>
+</tr>
+<tr class="even">
 <td class="gt_row gt_left" headers="label">    sciences de l&#39;éducation</td>
 <td class="gt_row gt_center" headers="stat_0">1,7% (2)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td class="gt_row gt_left" headers="label">    anthropologie</td>
 <td class="gt_row gt_center" headers="stat_0">0,8% (1)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td class="gt_row gt_left" headers="label">    sciences politiques</td>
 <td class="gt_row gt_center" headers="stat_0">0,8% (1)</td>
 </tr>
-<tr class="even">
-<td class="gt_row gt_left" headers="label">    autre</td>
-<td class="gt_row gt_center" headers="stat_0">19,2% (23)</td>
-</tr>
 <tr class="odd">
+<td class="gt_row gt_left" headers="label">    autre</td>
+<td class="gt_row gt_center" headers="stat_0">15,8% (19)</td>
+</tr>
+<tr class="even">
 <td class="gt_row gt_left" headers="label" style="font-weight: bold">Connaissance / Utilisation du site analyse-R</td>
 <td class="gt_row gt_center" headers="stat_0"><br>
 </td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td class="gt_row gt_left" headers="label">    non</td>
 <td class="gt_row gt_center" headers="stat_0">5,0% (6)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td class="gt_row gt_left" headers="label">    oui, et je le visite régulièrement</td>
 <td class="gt_row gt_center" headers="stat_0">81,7% (98)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td class="gt_row gt_left" headers="label">    oui, mais je ne l&#39;utilise pas</td>
 <td class="gt_row gt_center" headers="stat_0">13,3% (16)</td>
 </tr>
